Fixed toolkit fullscreen mode where it was allow the content behind the fullscreen view to scroll.

--- a/src/app/toolkit/base/elements/Colors/_colors.scss
+++ b/src/app/toolkit/base/elements/Colors/_colors.scss
@@ -47,7 +47,7 @@
             }
         }
 
-        .bg-white {
+        .color-border {
             &:after {
                 content: "";
                 position: absolute;
